# aoi

ark-fields/: Cargo.toml
ark-fields/src/: lib.rs
geohash-prover/: Cargo.toml
geohash-prover/src/: lib.rs
oracle/: Cargo.toml  README.md
oracle/src/: blake2_256.rs  ed25519.rs  env.rs  geohash.rs  lib.rs  main.rs
polkadot-sdk-solochain-template/: Cargo.toml
polkadot-sdk-solochain-template/pallets/attendance/: Cargo.toml
polkadot-sdk-solochain-template/pallets/attendance/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
polkadot-sdk-solochain-template/runtime/: Cargo.toml
polkadot-sdk-solochain-template/runtime/src/: benchmarks.rs  lib.rs
polkadot-sdk-solochain-template/runtime/src/configs/: mod.rs
simple-arkworks/src/: main.rs
