[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oracle"
path = "src/main.rs"

[dependencies]
thiserror = "2.0.12"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }                  # Required for async
geohash = "0.13.1"
async-trait = "0.1.71"
sp-io = "38.0.0"
hex = "0.4"
clap = { version = "4.5.21", features = ["derive"] }
